# Minecraft_neoforge_1.21.1-MacOSX_OpenGL-compat

./: .gitattributes  .gitignore  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.yml  metal-verify.yml
docs/: ROADMAP.md  ci-gpu-options.md  gl-functions.md  lwjgl-injection.md
native/: CMakeLists.txt
native/include/: compute.h  macglcompat.h  trampolines.h  transpiler.h  transpiler_c.h
native/src/: bridge.m  compute.m  core.m  iosurface.m  trampolines.c  transpiler.cpp
native/test/: headless_compute_pipeline_test.m  headless_compute_test.m  headless_e2e_test.mm  headless_iosurface_test.m  trampoline_test.c  transpiler_concurrency_test.cpp  transpiler_smoke.cpp  transpiler_test.cpp
scripts/: mac-verify.sh
src/main/java/com/macglcompat/: MacGLCompat.java
src/main/java/com/macglcompat/api/: GLFunctionHandler.java  MacGLCompatAPI.java
src/main/java/com/macglcompat/core/: CompatInstaller.java  InterceptingFunctionProvider.java  PlatformDetection.java  TextureBridge.java
src/main/java/com/macglcompat/natives/: NativeBridge.java  NativeLibraryLoader.java
src/main/resources/: pack.mcmeta
